Added testing for most features